syntax = "proto3";

package p2p;

option go_package = "./proto";

enum MessageType {
      QUERY = 0;
      DECISION = 1;
}

message Pong {
  repeated string Addresses = 1;  // Peers is a list of peer's network address.
}

// Empty is an empty message.
message Ping {
  string Address = 1;  // Address is the address of the peer.
}


message MessageRequest {
  MessageType Type = 1;
  bytes Value = 2;
}

message MessageResponse {
  MessageType Type = 1;
  bytes Value = 2;
}


message GetPreferenceResponse {
  int64 Preference = 1;
}

message Empty {

}